@@ -3311,25 +3311,23 @@ class cmd_status(Command):
             sys.stdout.write("Changes to be committed:\n\n")
             for kind, names in status.staged.items():
                 for name in names:
-                    sys.stdout.write(
-                        f"\t{kind}: {name.decode(sys.getfilesystemencoding())}\n"
-                    )
+                    sys.stdout.write(f"\t{kind}: {os.fsdecode(name)}\n")
             sys.stdout.write("\n")
         if status.unstaged:
             sys.stdout.write("Changes not staged for commit:\n\n")
             for name in status.unstaged:
-                sys.stdout.write(f"\t{name.decode(sys.getfilesystemencoding())}\n")
+                sys.stdout.write(f"\t{os.fsdecode(name)}\n")
             sys.stdout.write("\n")
         if status.untracked:
             sys.stdout.write("Untracked files:\n\n")
             if parsed_args.column:
                 # Format untracked files in columns
-                untracked_names = [name for name in status.untracked]
+                untracked_names = [os.fsdecode(name) for name in status.untracked]
                 output = format_columns(untracked_names, mode="column", indent="\t")
                 sys.stdout.write(output)
             else:
                 for name in status.untracked:
-                    sys.stdout.write(f"\t{name}\n")
+                    sys.stdout.write(f"\t{os.fsdecode(name)}\n")
             sys.stdout.write("\n")
 
 
